fixed issue with search page modal where it bled offscreen

--- a/client/src/components/layout/style.css
+++ b/client/src/components/layout/style.css
@@ -547,7 +547,7 @@ and (-webkit-min-device-pixel-ratio: 2) {
   .productDetails {
       padding: 5px;
       width: 100%;
-      height: 100%;
+      height: auto;
       margin-bottom: 0px;
       margin-top: 10px;
       padding-bottom: 0px;
